# DesktopAM

./: .gitignore  CMakeLists.txt  DesktopAM.slnx  DesktopAM.vcxproj  DesktopAM.vcxproj.filters  README.md  audiomixer.cpp  audiomixer.h  global.hpp  main.cpp  uimanager.cpp  uimanager.h
